--- a/src/main/webapp/vistas/histdesignagestor/View.xhtml
+++ b/src/main/webapp/vistas/histdesignagestor/View.xhtml
@@ -19,7 +19,7 @@
                         <h:outputText value="#{bundle.HistdesignagestorLabel_gestor}"/>
                         <h:outputText value="#{histdesignagestorController.selected.gestor}" title="#{bundle.HistdesignagestorTitle_gestor}"/>
                         <h:outputText value="#{bundle.HistdesignagestorLabel_iddesigna}"/>
-                        <h:outputText value="Id #{histdesignagestorController.selected.iddesigna.idpersona} : #{histdesignagestorController.selected.iddesigna.cargo} #{histdesignagestorController.selected.iddesigna.nombre}#{histdesignagestorController.selected.iddesigna.apellidop} #{histdesignagestorController.selected.iddesigna.apellidom}" title="#{bundle.HistdesignagestorTitle_iddesigna}"/>                       
+                        <h:outputText value="Id #{histdesignagestorController.selected.iddesigna.idpersona} : #{histdesignagestorController.selected.iddesigna.grado} #{histdesignagestorController.selected.iddesigna.nombre}#{histdesignagestorController.selected.iddesigna.apellidop} #{histdesignagestorController.selected.iddesigna.apellidom}" title="#{bundle.HistdesignagestorTitle_iddesigna}"/>                       
                         <h:outputText value="#{bundle.HistdesignagestorLabel_fechaInicio}"/>
                         <h:outputText value="#{histdesignagestorController.selected.fechaInicio}" title="#{bundle.HistdesignagestorTitle_fechaInicio}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
