--- a/src/main/webapp/vistas/organismos/Create.xhtml
+++ b/src/main/webapp/vistas/organismos/Create.xhtml
@@ -26,7 +26,7 @@
                         </p:selectOneMenu>
                     </p:panelGrid>
                     </div>    
-                    <p:commandButton actionListener="#{organismosController.create}" value="#{bundle.Save}" update="display,:OrganismosListForm:datalist,:growl" oncomplete="handleSubmit(args,'OrganismosCreateDialog');"/>                    
+                    <p:commandButton actionListener="#{organismosController.create}" value="#{bundle.Save}" update=":OrganismosListForm:datalist,:growl" oncomplete="handleSubmit(args,'OrganismosCreateDialog');"/>                    
                 </h:panelGroup>
             </h:form>
         </p:dialog>
