--- a/src/main/webapp/vistas/instituciones/Create.xhtml
+++ b/src/main/webapp/vistas/instituciones/Create.xhtml
@@ -37,7 +37,13 @@
                         </p:selectOneMenu>
                     </p:panelGrid>       
                     </div>
-                    <p:commandButton actionListener="#{institucionesController.create}" value="#{bundle.Save}" update="display,:InstitucionesListForm:datalist,:growl" oncomplete="handleSubmit(args,'InstitucionesCreateDialog');"/>
+                    <p:commandButton actionListener="#{institucionesController.create}" value="#{bundle.Save}" update="display,:InstitucionesListForm:datalist,:growl" oncomplete="handleSubmit(args,'InstitucionesCreateDialog');">
+                        <p:confirm header="#{bundle.Confirmacion}" message="#{bundle.MsjConfirmacion}" icon="ui-icon-alert" />
+                    </p:commandButton>
+                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" closable="false">
+                        <p:commandButton value="#{bundle.BotonYes}" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                        <p:commandButton value="#{bundle.BotonNo}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
