--- a/src/main/webapp/vistas/organismos/Crear.xhtml
+++ b/src/main/webapp/vistas/organismos/Crear.xhtml
@@ -18,7 +18,13 @@
                         <h:outputText id="iddependencia" value="#{organismosController.selected.iddependencia.siglas}" title="#{bundle.OrganismosTitle_dependencia}"/>               
                     </p:panelGrid>
                     </div>    
-                    <p:commandButton actionListener="#{organismosController.create}" value="#{bundle.Save}" update="display,:GestoresCreateForm" oncomplete="handleSubmit(args,'OrganismosCreateDialog');"/>
+                    <p:commandButton actionListener="#{organismosController.create}" value="#{bundle.Save}" update="display,:GestoresCreateForm" oncomplete="handleSubmit(args,'OrganismosCreateDialog');">
+                        <p:confirm header="#{bundle.Confirmacion}" message="#{bundle.MsjConfirmacion}" icon="ui-icon-alert" />
+                    </p:commandButton>
+                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" closable="false">
+                        <p:commandButton value="#{bundle.BotonYes}" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                        <p:commandButton value="#{bundle.BotonNo}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
