--- a/src/main/webapp/vistas/ratificaciones/Edit.xhtml
+++ b/src/main/webapp/vistas/ratificaciones/Edit.xhtml
@@ -28,7 +28,13 @@
                         <p:selectBooleanCheckbox id="status" value="#{ratificacionesController.selected.status}" />
                     </p:panelGrid>
                     </div>
-                    <p:commandButton actionListener="#{ratificacionesController.update}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args, 'RatificacionesEditDialog');"/>
+                    <p:commandButton actionListener="#{ratificacionesController.update}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args, 'RatificacionesEditDialog');">
+                        <p:confirm header="#{bundle.Confirmacion}" message="#{bundle.MsjConfirmacion}" icon="ui-icon-alert" />
+                    </p:commandButton>
+                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" closable="false">
+                        <p:commandButton value="#{bundle.BotonYes}" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                        <p:commandButton value="#{bundle.BotonNo}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
